# Presentations

./: Readme.md
2019-03/: Intro.pptx
2019-04/sample/: .clang-tidy  Readme.md  main.cpp  main.h
2019-06/: 1 - Range for.cpp  2 - Range begin.cpp  3 - Range foreach.cpp  4 - Range projections.cpp  5 - Range generators.cpp  6 - Range adaptors.cpp  7 - Range comprehensions.cpp  Readme.md
2019-12/examples/: 01_hello_world.cpp  02_hello_world_std.cpp  03_hello_world_fmt.cpp  04_basic_types.cpp  05_format_string.cpp  06_output_iterator.cpp  07_formatter_specializations.cpp  08_error_handling.cpp  CMakeLists.txt
2020-03/: Coroutines.key  Coroutines.pptx
